--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 
                                     </p>
                                     <p>&nbsp;</p>
-                                    <a class="btn btn-primary" href="https://www.theappware.com">Get app</a>
+                                    <a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=com.theappware.edupremium">Get app</a>
                                     
                                 </div>
                             </div>
