--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -408,6 +409,7 @@
                 <div class="social d-flex justify-content-center">
                     <!-- for spacing purpose-->
                 </div>
+                <lottie-player src="https://assets9.lottiefiles.com/private_files/lf30_rwpu0mow.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;" loop autoplay></lottie-player>
             </div>
         </section>
         <!-- Footer-->
