--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 
                 <h1>Courses</h1>
                  <div>
-                     <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_hxart9lz.json"  background="transparent"  speed="1" style=" height: 400px; width: 400px; left: 0; right:0; margin-left: auto; margin-right: auto; position: relative"    loop  autoplay></lottie-player>
+                     <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_hxart9lz.json"  background="transparent"  speed="1" style=" height: 600px; width: 600px; max-width: 95%; left: 0; right:0; margin-left: auto; margin-right: auto; position: relative"    loop  autoplay></lottie-player>
                 </div>
                 <!-- Featured Project Row 1-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
@@ -121,7 +121,7 @@
                 </div>     
                 <!-- More info-->
                  <div>
-                     <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_ikvz7qhc.json"  background="transparent"  speed="1" style=" height: 400px; width: 400px; left: 0; right:0; margin-left: auto; margin-right: auto; position: relative"    loop  autoplay></lottie-player>
+                     <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_ikvz7qhc.json"  background="transparent"  speed="1" style=" height: 600px; width: 600px; max-width: 95%; left: 0; right:0; margin-left: auto; margin-right: auto; position: relative"    loop  autoplay></lottie-player>
                 </div>
                 <!-- Row 1-->
                  <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
@@ -377,7 +377,7 @@
                   <h1 class="text-white mb-5">Contact us</h1>
              </div>
              <div>
-               <lottie-player src="https://assets4.lottiefiles.com/private_files/lf30_vrcurbxk.json"  background="transparent"  speed="1" style=" height: 400px; width: 400px; left: 0; right:0; margin-left: auto; margin-right: auto; position: relative"    loop  autoplay></lottie-player>
+               <lottie-player src="https://assets4.lottiefiles.com/private_files/lf30_vrcurbxk.json"  background="transparent"  speed="1" style=" height: 600px; width: 600px; max-width: 95%; left: 0; right:0; margin-left: auto; margin-right: auto; position: relative"    loop  autoplay></lottie-player>
             </div>
               
             <div class="container px-4 px-lg-5">
