--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@
                
             </div>
         </section>
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.8519475508724!2d79.09684393247667!3d21.11846793894315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4bf5764c5160b%3A0x6deecddf4a409a38!2sVilasnagar%2C%20Rameshwari%2C%20Nagpur%2C%20Maharashtra%20440027!5e0!3m2!1sen!2sin!4v1650527421585!5m2!1sen!2sin" style="height: 400px;width: 100%; max-width: 95%: left:0; right:0; margin-left: auto;margin-right: auto; position: relative" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; www.theappware.com 2022.<br> Disclaimer: This is demonstration website. All images and names throughout the website are fictitious, they are for display purpose only</div></footer>
         <!-- Bootstrap core JS-->
